[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://src/main/title/StartScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit-28.png" type="Texture" id=3]
[ext_resource path="res://src/ui/GameInfo.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tanklogo6-54.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tanktext-66.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankbg-edit2.jpeg" type="Texture" id=9]
[ext_resource path="res://src/ui/UILayer.tscn" type="PackedScene" id=10]

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleText" type="TextureRect" parent="."]
anchor_top = -0.0925926
anchor_right = 1.0
anchor_bottom = 0.555556
margin_bottom = -100.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StartButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -363.5
margin_top = -225.0
margin_right = 363.5
rect_scale = Vector2( 1, 0.8 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="StartButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 11.0
margin_right = 156.0
margin_bottom = -25.0
rect_scale = Vector2( 0.8, 1 )
texture = ExtResource( 8 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UILayer" parent="." instance=ExtResource( 10 )]

[node name="GameInfo" parent="UILayer/Screens" index="0" instance=ExtResource( 4 )]
visible = false

[node name="InfoButton" parent="UILayer/Overlay/HBoxContainer" index="0"]
visible = true
margin_left = 1626.0
margin_right = 1759.0
margin_bottom = 232.0

[node name="SoundOnButton" parent="UILayer/Overlay/HBoxContainer" index="2"]
visible = true
margin_bottom = 232.0

[node name="Alert" parent="UILayer/Overlay" index="3"]
margin_right = 1730.89

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="info_button" from="UILayer" to="." method="_on_UILayer_info_button"]

[editable path="UILayer"]
